fix horizontal scroll

--- a/src/components/Global/PoolCard/PoolCard.module.css
+++ b/src/components/Global/PoolCard/PoolCard.module.css
@@ -172,7 +172,7 @@
     .main_container {
         background-color: transparent;
        
-        background: #F00000;  /* fallback for old browsers */
+     
 background: -webkit-linear-gradient(to right, var(--dark2), var(--body-bg));  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, var(--dark2), var(--body-bg)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
